--- a/Team_Rudra-main/index.html
+++ b/Team_Rudra-main/index.html
@@ -167,16 +167,25 @@
     </video>
   </div>
 
-  <section class="relative mx-auto max-w-7xl p-6 border-2 border-white rounded-xl text-center text-white shadow-xl my-12 overflow-hidden main hover:border-cyan-400 hover:shadow-cyan-400/70">
-    <h1 class="text-4xl font-bold text-red-400 mb-4">About Us</h1>
-    <p class="whitespace-pre-line text-lg leading-8 mb-6">
-      We are Team Rudra, the official Formula Student team from Rajiv Gandhi University of Knowledge Technologies (RGUKT), Basar. As Mechanical Engineering students, we are proudly designing and building the university’s first-ever Formula prototype car to compete in FFS INDIA 2025 (Season 6).
-      Our journey represents more than just engineering—it’s about innovation, teamwork, and turning knowledge into action. Join us as we pave the way for a new era of student-led motorsports at RGUKT Basar.
-    </p>
-    <button class="bg-blue-800 px-6 py-2 text-white font-semibold rounded-lg shadow-md hover:bg-blue-600 transition transform hover:scale-105">
-      Know More
-    </button>
-  </section>
+
+<section class="bg-black py-10 flex justify-center items-center">
+  <div class="flex flex-col md:flex-row bg-gradient-to-br from-gray-800 to-gray-900 rounded-2xl shadow-2xl overflow-hidden w-full max-w-[85%] transform transition hover:rotate-y-2 hover:shadow-cyan-500/50 relative light-glow">
+
+    <div class="relative p-10 bg-gray-900 flex justify-center items-center flex-col w-full">
+      <h1 class="text-4xl font-bold text-red-400 mb-6 text-center">About Us</h1>
+      <p class="text-gray-300 text-justify leading-8 text-xl max-w-5xl">
+        We are Team Rudra, the official Formula Student team from Rajiv Gandhi University of Knowledge Technologies (RGUKT), Basar. As Mechanical Engineering students, we are proudly designing and building the university’s first-ever Formula prototype car to compete in FFS INDIA 2025 (Season 6).
+        <br><br>
+        Our journey represents more than just engineering—it’s about innovation, teamwork, and turning knowledge into action. Join us as we pave the way for a new era of student-led motorsports at RGUKT Basar.
+      </p>
+      <a href="about.html" class="inline-block mt-8 px-8 py-3 bg-blue-800 text-white font-semibold rounded-full shadow-md hover:bg-blue-600 transition transform hover:scale-110 animate-pulse">
+        Know More
+      </a>
+    </div>
+
+  </div>
+</section>
+
 
 <section class="bg-black py-10 flex justify-center items-center">
   <div class="flex flex-col md:flex-row bg-gradient-to-br from-gray-800 to-gray-900 rounded-2xl shadow-2xl overflow-hidden max-w-7xl transform transition hover:rotate-y-2 hover:shadow-cyan-500/50 relative light-glow">
@@ -191,16 +200,21 @@
     </div>
 
     <div class="flex-1 p-6 text-white">
-      <p class="text-gray-300 text-justify leading-7">
+      <p class="text-gray-300 text-justify leading-10 text-lg">
         
-        We are proudly mentored by
-Dr. V. Chandra Sekhara Rao (Ph.D., IIT Madras) —
-a dedicated academician and researcher with 11+ years of experience in mechanical engineering and composite materials.
+        Our journey is supported by the constant guidance of our faculty mentor, Dr. V. Chandra Sekhara Rao (Ph.D., IIT Madras) — Associate Professor of Mechanical Engineering at RGUKT Basar.
 
-Under his guidance, we’ve learned to approach every challenge with discipline, curiosity, and real-world thinking.
-He constantly encourages us to think beyond textbooks, build with purpose, and lead with confidence.
+From technical reviews to team strategy, he plays a key role in shaping our project at every stage. With a strong research background in polymer composites, fracture mechanics, and renewable materials, he brings deep academic insight into real-world problem solving.
 
-> His mentorship is not just technical — it’s the driving force behind our ambition.
+He actively helps us bridge the gap between classroom learning and practical engineering, ensuring that each of us grows as a true problem-solver.
+
+His experience, encouragement, and belief in student potential fuels our motivation and keeps us pushing boundaries.
+
+He regularly reviews our designs, ensures safety and feasibility, and inspires us to meet professional standards in every phase of our work.
+
+He’s not just our advisor —
+
+> “He’s the steady force behind us — guiding, believing, and helping us transform challenges into learning.”
       </p>
       <a href="facultyInfo.html" class="inline-block mt-4 px-6 py-2 bg-red-400 text-white rounded-full font-semibold hover:scale-110 transition shadow-lg animate-pulse">
         Know More
@@ -209,7 +223,6 @@ He constantly encourages us to think beyond textbooks, build with purpose, and l
 
   </div>
 </section>
-
 
 
 
