--- a/Team_Rudra-main/Contact.html
+++ b/Team_Rudra-main/Contact.html
@@ -5,106 +5,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Form</title>
 
-  <!-- Font Awesome Free (Official CDN) -->
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-9S6H8Rpq5um9JQ5drsyFv6Q0oUtp+/29vU1HR7+F0QO7boOZtF8eOESB4nQzLOeaJxKDEnMTWof3NmktxAZFjQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-black text-white">
+<body class="bg-black text-white min-h-screen">
 
-    <header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
-    <div class="flex items-center">
-      <img src="./images/logo1.png" alt="" class="w-24 h-24">
-      <h1 class="text-2xl font-bold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-2">
-        𝐓𝖾αꭑ 𝐑υᑯ𝗋α
-      </h1>
+  <!-- Header -->
+<header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
+  <div class="flex items-center">
+    <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
+    <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
+      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+    </h1>
+  </div>
+
+  <div class="hidden md:flex text-white gap-10 mr-10 text-lg font-semibold"> <!-- Optional: slightly larger menu text -->
+    <div class="relative group cursor-pointer">
+      <a href="index.html" class="hover:text-yellow-400">Home</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-
-   <div class="hidden md:flex text-white gap-8 mr-10">
-  <div class="relative group cursor-pointer">
-    <a href="index.html" class="hover:text-yellow-400">Home</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="faculty.html" class="hover:text-yellow-400">Faculty</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="team.html" class="hover:text-yellow-400">Team Members</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-</div>
-
-
-    <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
-      <span class="h-[3px] w-6 bg-white rounded"></span>
-      <span class="h-[3px] w-6 bg-white rounded"></span>
-      <span class="h-[3px] w-6 bg-white rounded"></span>
+    <div class="relative group cursor-pointer">
+      <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-  </header>
+    <div class="relative group cursor-pointer">
+      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+  </div>
 
+  <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+  </div>
+</header>
+
+
+  <!-- Contact Section -->
   <section id="contact-me" class="py-20 px-6">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl text-yellow-500 mb-4 font-extrabold">
-        <i class="fas fa-headset text-amber-200"></i> Get in 
-        <span class="text-orange-600 font-extrabold">Touch</span>
+    <div class="max-w-5xl mx-auto text-center">
+      <h2 class="text-4xl font-extrabold text-yellow-500 mb-3">
+        <i class="fas fa-headset text-amber-300 mr-2"></i> Get in <span class="text-orange-500">Touch</span>
       </h2>
-      <p class="mb-6 text-gray-500">Let’s build something great together!
-Contact us today — we’d love to hear from you. Feel free to reach</p>
-      
-      <div class="flex flex-col md:flex-row w-full bg-[#1E1E1E] mx-auto p-6 rounded shadow-[0_0_6px_1px_rgba(255,255,255,0.03)] hover:shadow-[0_0_15px_4px_rgba(255,0,0,0.7)] transition duration-300 group">
-        
-        <!-- Form -->
+      <p class="text-gray-400 mb-8">Let’s build something great together! Contact us today — we’d love to hear from you.</p>
+
+      <div class="flex flex-col md:flex-row bg-gradient-to-br from-gray-800 to-gray-900 p-6 rounded-xl shadow-[0_0_8px_rgba(255,0,0,0.4)] hover:shadow-[0_0_16px_rgba(255,0,0,0.6)] transition duration-300 group">
+
+        <!-- Contact Form -->
         <div class="md:w-1/2">
-          <form action="https://api.web3forms.com/submit" method="POST" class="max-w-lg mx-auto p-4 bg-[#1E1E1E] rounded shadow">
+          <form action="https://api.web3forms.com/submit" method="POST" class="bg-[#1E1E1E] rounded p-4 w-full">
             <input type="hidden" name="access_key" value="72309bfa-1d59-4620-bfd9-bd2812bc5607" />
 
             <div class="space-y-4">
               <div class="relative">
-                <input type="text" name="name" placeholder="Name" required class="w-full pl-10 pr-3 py-2 text-black border border-gray-400 rounded focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-                <i class="fa-solid fa-user absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400"></i>
+                <input type="text" name="name" placeholder="Name" required class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
+                <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400 text-lg">
+                  <i class="fas fa-user"></i>
+                </span>
               </div>
 
               <div class="relative">
-                <input type="email" name="email" placeholder="Email" required class="w-full pl-10 pr-3 py-2 border text-black border-gray-400 rounded focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-                <i class="fa-solid fa-envelope absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400"></i>
+                <input type="email" name="email" placeholder="Email" required class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
+                <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400 text-lg">
+                  <i class="fas fa-envelope"></i>
+                </span>
               </div>
 
               <div class="relative">
-                <input type="text" name="phone" placeholder="Phone" class="w-full pl-10 pr-3 py-2 border text-black text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-                <i class="fa-solid fa-phone absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400"></i>
+                <input type="text" name="phone" placeholder="Phone" class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
+                <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400 text-lg">
+                  <i class="fas fa-phone"></i>
+                </span>
               </div>
 
               <div class="relative">
-                <textarea name="message" placeholder="Message" required class="w-full pl-10 pr-3 py-2 border text-black text-gray-200 rounded resize-none h-24 focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
-                <i class="fa-solid fa-comment-dots absolute left-3 top-3 text-orange-400"></i>
+                <textarea name="message" rows="5" placeholder="Message" required class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded resize-none focus:outline-none focus:ring-2 focus:ring-red-500"></textarea>
+                <span class="absolute left-3 top-3 text-orange-400 text-lg">
+                  <i class="fas fa-comment-dots"></i>
+                </span>
               </div>
             </div>
 
-            <div class="mt-6 text-right">
-              <button type="submit" class="inline-flex w-full justify-center md:w-35 items-center gap-2 bg-indigo-500 text-white px-6 py-2 rounded hover:bg-indigo-600 transition shadow-md hover:shadow-[0_0_20px_rgba(99,102,241,0.8)]">
-                Submit <i class="fa-solid fa-paper-plane"></i>
-              </button>
-            </div>
+            <button type="submit" class="mt-6 w-full flex justify-center items-center gap-2 bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-6 rounded shadow-md hover:shadow-red-500/50 transition">
+              Submit <i class="fas fa-paper-plane"></i>
+            </button>
           </form>
         </div>
 
-        <!-- Image -->
-        <div class="md:w-1/2 flex justify-center items-center ml-5 mt-8 md:mt-0">
-          <img src="./images/contact.webp" alt="Contact" class="rounded" />
+        <!-- Contact Image -->
+        <div class="md:w-1/2 flex justify-center items-center mt-10 md:mt-0 md:ml-6">
+          <img src="./images/contact.webp" alt="Contact" class="rounded shadow-lg max-w-xs md:max-w-sm">
         </div>
 
       </div>
