--- a/Team_Rudra-main/ContactSponsor.html
+++ b/Team_Rudra-main/ContactSponsor.html
@@ -31,55 +31,98 @@
     }
   </style>
 </head>
-<body class="bg-gray-900 text-white">
+<body class="bg-black text-white">
 
   <!-- Loading Spinner -->
-  <div id="loader" class="fixed inset-0 bg-gray-900 flex justify-center items-center z-50">
+  <div id="loader" class="fixed inset-0 bg-black flex justify-center items-center z-50">
     <div class="w-16 h-16 border-4 border-red-400 border-t-transparent rounded-full slow-spin"></div>
   </div>
 
-    <header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
-    <div class="flex items-center">
-      <img src="./images/logo1.png" alt="" class="w-24 h-24">
-      <h1 class="text-2xl font-bold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-2">
-        𝐓𝖾αꭑ 𝐑υᑯ𝗋α
-      </h1>
+ <header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
+  <div class="flex items-center">
+    <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
+    <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
+      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+    </h1>
+  </div>
+
+  <div class="hidden md:flex text-white gap-10 mr-10 text-lg font-semibold"> <!-- Optional: slightly larger menu text -->
+    <div class="relative group cursor-pointer">
+      <a href="index.html" class="hover:text-yellow-400">Home</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-
-   <div class="hidden md:flex text-white gap-8 mr-10">
-  <div class="relative group cursor-pointer">
-    <a href="index.html" class="hover:text-yellow-400">Home</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="faculty.html" class="hover:text-yellow-400">Faculty</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="team.html" class="hover:text-yellow-400">Team Members</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-</div>
-
-
-    <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
-      <span class="h-[3px] w-6 bg-white rounded"></span>
-      <span class="h-[3px] w-6 bg-white rounded"></span>
-      <span class="h-[3px] w-6 bg-white rounded"></span>
+    <div class="relative group cursor-pointer">
+      <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-  </header>
+    <div class="relative group cursor-pointer">
+      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+  </div>
+
+  <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+  </div>
+</header>
+
+
+<h1 class="text-4xl font-extrabold text-center text-red-400 mb-6">
+  Become a Sponsor
+</h1>
+  <section class="py-10 px-4 flex justify-center items-center">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-7xl w-full">
+
+      <!-- 1st Div -->
+      <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 hover:shadow-cyan-500/50 transition">
+        <h2 class="text-xl font-bold text-red-400 mb-4 text-center">WHAT MAKES US UNIQUE</h2>
+        <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
+          <li>We are Telangana’s first Formula Student team fully built by rural meritorious students aged 16–22.</li>
+          <li>Based in RGUKT Basar, we represent over 10,000 young minds from across Telangana.</li>
+          <li>We are powered by raw passion and bold innovation, not by legacy or past glory.</li>
+          <li>Our students are actively seeking companies that value creativity, social impact, and growth.</li>
+        </ul>
+      </div>
+
+      <!-- 2nd Div -->
+      <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 hover:shadow-cyan-500/50 transition">
+        <h2 class="text-xl font-bold text-red-400 mb-4 text-center">WHAT WE OFFER OUR SPONSORS</h2>
+        <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
+          <li>Logo placement on car, uniforms, digital & printed media.</li>
+          <li>Consistent logo sizing across tiers for fairness and balance.</li>
+          <li>Exposure through Instagram, LinkedIn, YouTube, WhatsApp communities, campaigns, and campus events.</li>
+          <li>Presence in brochures, pitch decks, workshop stalls, and reels.</li>
+          <li>Recognition at Formula FMAE Student (FFS) India and related national events.</li>
+        </ul>
+      </div>
+
+      <!-- 3rd Div -->
+      <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 hover:shadow-cyan-500/50 transition">
+        <h2 class="text-xl font-bold text-red-400 mb-4 text-center">LONG-TERM BRAND IMPACT</h2>
+        <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
+          <li>Reach 10,000+ future-ready students trained in tech, design, and innovation.</li>
+          <li>Create a positive brand recall among India's rural youth population.</li>
+          <li>Support innovation from the ground up and position your brand as a true force for growth.</li>
+          <li>Inspire loyalty by backing students before they become industry professionals.</li>
+        </ul>
+      </div>
+
+    </div>
+  </section>
 
   <section class="max-w-3xl mx-auto px-6 py-16 fade-slide hidden" id="main-content">
     <h1 class="text-4xl font-extrabold text-center text-red-400 mb-6">
