--- a/Team_Rudra-main/sponsor.html
+++ b/Team_Rudra-main/sponsor.html
@@ -34,52 +34,60 @@
   </div>
 
     <header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
-    <div class="flex items-center">
-      <img src="./images/logo1.png" alt="" class="w-24 h-24">
-      <h1 class="text-2xl font-bold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-2">
-        𝐓𝖾αꭑ 𝐑υᑯ𝗋α
-      </h1>
+  <div class="flex items-center">
+    <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
+    <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
+      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+    </h1>
+  </div>
+
+  <div class="hidden md:flex text-white gap-10 mr-10 text-lg font-semibold"> <!-- Optional: slightly larger menu text -->
+    <div class="relative group cursor-pointer">
+      <a href="index.html" class="hover:text-yellow-400">Home</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-
-   <div class="hidden md:flex text-white gap-8 mr-10">
-  <div class="relative group cursor-pointer">
-    <a href="index.html" class="hover:text-yellow-400">Home</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="faculty.html" class="hover:text-yellow-400">Faculty</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="team.html" class="hover:text-yellow-400">Team Members</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-  <div class="relative group cursor-pointer">
-    <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
-    <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-  </div>
-</div>
-
-
-    <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
-      <span class="h-[3px] w-6 bg-white rounded"></span>
-      <span class="h-[3px] w-6 bg-white rounded"></span>
-      <span class="h-[3px] w-6 bg-white rounded"></span>
+    <div class="relative group cursor-pointer">
+      <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-  </header>
+    <div class="relative group cursor-pointer">
+      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+  </div>
+
+  <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+  </div>
+</header>
+
 
   <section class="max-w-6xl mx-auto px-4 py-10 hidden" id="main-content">
     <h1 class="text-4xl font-extrabold text-center text-red-400 mb-10 fade-slide">Our Sponsors</h1>
     <div id="sponsor-list" class="space-y-10"></div>
   </section>
+
+ <div class="flex justify-center my-8">
+  <a href="./contactsponsor.html" class="inline-block bg-gradient-to-r from-red-500 to-orange-500 hover:from-red-600 hover:to-orange-600 text-white font-semibold px-8 py-4 rounded-full shadow-lg transition duration-300">
+    Become a Sponsor
+  </a>
+</div>
+
+
 
   <script>
     const sponsors = [
@@ -99,7 +107,7 @@
         title: "BRR Foundation",
         description: "The BRR Foundation believed in our potential when this was just an ambitious student dream. As our first financial sponsor, their support helped us procure essential raw materials and initiate fabrication. Their backing lit the fuse to our project’s momentum.",
         slogan: "BRR Foundation didn't just fund us — they accelerated a vision.",
-        image: "./images/brr.jpg"
+        image: "./images/brr.png"
       }
     ];
 
