--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
             <div>
   
               <h3>contact info</h3>
-              <p> <i class="fas fa-phone"></i> +91 9121804018</p>
-              <p> <i class="fas fa-envelope"></i> ryanaboinasomanath@gmail.com</p>
+              <p> <i class="fas fa-phone"></i> +91 9121156180</p>
+              <p> <i class="fas fa-envelope"></i> teamrudraracers@gmail.com</p>
               <p> <i class="fas fa-map-marked-alt"></i> Telangana, India-503102</p>
             </div>
             <div>
