--- a/Team_Rudra-main/Contact.html
+++ b/Team_Rudra-main/Contact.html
@@ -5,8 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Form</title>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- Add this in your <head> -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-9S6H8Rpq5um9JQ5drsyFv6Q0oUtp+/29vU1HR7+F0QO7boOZtF8eOESB4nQzLOeaJxKDEnMTWof3NmktxAZFjQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-9S6H8Rpq5um9JQ5drsyFv6Q0oUtp+/29vU1HR7+F0QO7boOZtF8eOESB4nQzLOeaJxKDEnMTWof3NmktxAZFjQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -14,7 +22,7 @@
 <body class="bg-black text-white min-h-screen">
 
   <!-- Header -->
-<header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
+ <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
@@ -57,6 +65,16 @@
 </header>
 
 
+  <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
+  <a href="index.html" class="hover:text-yellow-400">Home</a>
+  <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+  <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+  <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+</div>
+
+
   <!-- Contact Section -->
   <section id="contact-me" class="py-20 px-6">
     <div class="max-w-5xl mx-auto text-center">
@@ -72,35 +90,42 @@
           <form action="https://api.web3forms.com/submit" method="POST" class="bg-[#1E1E1E] rounded p-4 w-full">
             <input type="hidden" name="access_key" value="72309bfa-1d59-4620-bfd9-bd2812bc5607" />
 
-            <div class="space-y-4">
-              <div class="relative">
-                <input type="text" name="name" placeholder="Name" required class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
-                <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400 text-lg">
-                  <i class="fas fa-user"></i>
-                </span>
-              </div>
+           <div class="space-y-4">
 
-              <div class="relative">
-                <input type="email" name="email" placeholder="Email" required class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
-                <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400 text-lg">
-                  <i class="fas fa-envelope"></i>
-                </span>
-              </div>
+  <div class="relative">
+    <input type="text" name="name" placeholder="Name" required
+      class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
+    <span class="material-icons absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500 text-xl">
+      person
+    </span>
+  </div>
 
-              <div class="relative">
-                <input type="text" name="phone" placeholder="Phone" class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
-                <span class="absolute left-3 top-1/2 transform -translate-y-1/2 text-orange-400 text-lg">
-                  <i class="fas fa-phone"></i>
-                </span>
-              </div>
+  <div class="relative">
+    <input type="email" name="email" placeholder="Email" required
+      class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
+    <span class="material-icons absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500 text-xl">
+      email
+    </span>
+  </div>
 
-              <div class="relative">
-                <textarea name="message" rows="5" placeholder="Message" required class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded resize-none focus:outline-none focus:ring-2 focus:ring-red-500"></textarea>
-                <span class="absolute left-3 top-3 text-orange-400 text-lg">
-                  <i class="fas fa-comment-dots"></i>
-                </span>
-              </div>
-            </div>
+  <div class="relative">
+    <input type="text" name="phone" placeholder="Phone"
+      class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded focus:outline-none focus:ring-2 focus:ring-red-500" />
+    <span class="material-icons absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500 text-xl">
+      call
+    </span>
+  </div>
+
+  <div class="relative">
+    <textarea name="message" rows="5" placeholder="Message" required
+      class="w-full pl-10 pr-3 py-2 text-black border border-gray-500 rounded resize-none focus:outline-none focus:ring-2 focus:ring-red-500"></textarea>
+    <span class="material-icons absolute left-3 top-3 text-gray-500 text-xl">
+      chat_bubble
+    </span>
+  </div>
+
+</div>
+
 
             <button type="submit" class="mt-6 w-full flex justify-center items-center gap-2 bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-6 rounded shadow-md hover:shadow-red-500/50 transition">
               Submit <i class="fas fa-paper-plane"></i>
@@ -116,6 +141,13 @@
       </div>
     </div>
   </section>
+
+  <script>
+     // Hamburger Menu Toggle
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('hidden');
+  }
+  </script>
 
 </body>
 </html>
