--- a/Team_Rudra-main/ContactSponsor.html
+++ b/Team_Rudra-main/ContactSponsor.html
@@ -25,6 +25,17 @@
       animation: spin 2s linear infinite;
     }
 
+    .fade-slide {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1.2s ease, transform 1.2s ease;
+}
+.fade-slide.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
     @keyframes spin {
       from { transform: rotate(0deg); }
       to { transform: rotate(360deg); }
@@ -38,7 +49,7 @@
     <div class="w-16 h-16 border-4 border-red-400 border-t-transparent rounded-full slow-spin"></div>
   </div>
 
- <header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
+ <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
@@ -81,48 +92,66 @@
 </header>
 
 
+  <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
+  <a href="index.html" class="hover:text-yellow-400">Home</a>
+  <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+  <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+  <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+</div>
+
 <h1 class="text-4xl font-extrabold text-center text-red-400 mb-6">
   Become a Sponsor
 </h1>
-  <section class="py-10 px-4 flex justify-center items-center">
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-7xl w-full">
+  <section class="py-10 px-4 flex justify-center">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 w-full max-w-7xl">
 
-      <!-- 1st Div -->
-      <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 hover:shadow-cyan-500/50 transition">
-        <h2 class="text-xl font-bold text-red-400 mb-4 text-center">WHAT MAKES US UNIQUE</h2>
-        <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
-          <li>We are Telangana’s first Formula Student team fully built by rural meritorious students aged 16–22.</li>
-          <li>Based in RGUKT Basar, we represent over 10,000 young minds from across Telangana.</li>
-          <li>We are powered by raw passion and bold innovation, not by legacy or past glory.</li>
-          <li>Our students are actively seeking companies that value creativity, social impact, and growth.</li>
-        </ul>
-      </div>
-
-      <!-- 2nd Div -->
-      <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 hover:shadow-cyan-500/50 transition">
-        <h2 class="text-xl font-bold text-red-400 mb-4 text-center">WHAT WE OFFER OUR SPONSORS</h2>
-        <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
-          <li>Logo placement on car, uniforms, digital & printed media.</li>
-          <li>Consistent logo sizing across tiers for fairness and balance.</li>
-          <li>Exposure through Instagram, LinkedIn, YouTube, WhatsApp communities, campaigns, and campus events.</li>
-          <li>Presence in brochures, pitch decks, workshop stalls, and reels.</li>
-          <li>Recognition at Formula FMAE Student (FFS) India and related national events.</li>
-        </ul>
-      </div>
-
-      <!-- 3rd Div -->
-      <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 hover:shadow-cyan-500/50 transition">
-        <h2 class="text-xl font-bold text-red-400 mb-4 text-center">LONG-TERM BRAND IMPACT</h2>
-        <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
-          <li>Reach 10,000+ future-ready students trained in tech, design, and innovation.</li>
-          <li>Create a positive brand recall among India's rural youth population.</li>
-          <li>Support innovation from the ground up and position your brand as a true force for growth.</li>
-          <li>Inspire loyalty by backing students before they become industry professionals.</li>
-        </ul>
-      </div>
-
+    <!-- Card 1 -->
+    <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 
+                hover:shadow-cyan-500/50 transition transform hover:scale-105 duration-300 ease-in-out 
+                w-full max-w-xs md:max-w-full mx-auto">
+      <h2 class="text-xl font-bold text-red-400 mb-4 text-center">WHAT MAKES US UNIQUE</h2>
+      <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
+        <li>We are Telangana’s first Formula Student team fully built by rural meritorious students aged 16–22.</li>
+        <li>Based in RGUKT Basar, we represent over 10,000 young minds from across Telangana.</li>
+        <li>We are powered by raw passion and bold innovation, not by legacy or past glory.</li>
+        <li>Our students are actively seeking companies that value creativity, social impact, and growth.</li>
+      </ul>
     </div>
-  </section>
+
+    <!-- Card 2 -->
+    <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 
+                hover:shadow-cyan-500/50 transition transform hover:scale-105 duration-300 ease-in-out 
+                w-full max-w-xs md:max-w-full mx-auto">
+      <h2 class="text-xl font-bold text-red-400 mb-4 text-center">WHAT WE OFFER OUR SPONSORS</h2>
+      <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
+        <li>Logo placement on car, uniforms, digital & printed media.</li>
+        <li>Consistent logo sizing across tiers for fairness and balance.</li>
+        <li>Exposure through Instagram, LinkedIn, YouTube, WhatsApp communities, campaigns, and campus events.</li>
+        <li>Presence in brochures, pitch decks, workshop stalls, and reels.</li>
+        <li>Recognition at Formula FMAE Student (FFS) India and related national events.</li>
+      </ul>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-xl shadow-xl p-6 
+                hover:shadow-cyan-500/50 transition transform hover:scale-105 duration-300 ease-in-out 
+                w-full max-w-xs md:max-w-full mx-auto">
+      <h2 class="text-xl font-bold text-red-400 mb-4 text-center">LONG-TERM BRAND IMPACT</h2>
+      <ul class="list-disc pl-5 space-y-3 text-gray-300 text-justify">
+        <li>Reach 10,000+ future-ready students trained in tech, design, and innovation.</li>
+        <li>Create a positive brand recall among India's rural youth population.</li>
+        <li>Support innovation from the ground up and position your brand as a true force for growth.</li>
+        <li>Inspire loyalty by backing students before they become industry professionals.</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
+
+
 
   <section class="max-w-3xl mx-auto px-6 py-16 fade-slide hidden" id="main-content">
     <h1 class="text-4xl font-extrabold text-center text-red-400 mb-6">
@@ -171,18 +200,31 @@
   </section>
 
   <script>
-    window.addEventListener('load', () => {
-      const loader = document.getElementById('loader');
-      const content = document.getElementById('main-content');
+  window.addEventListener('load', () => {
+    const loader = document.getElementById('loader');
+    const content = document.getElementById('main-content');
 
-      loader.style.display = 'none';
-      content.classList.remove('hidden');
-
+    // Hide loader after small delay (optional for effect)
+    setTimeout(() => {
+      loader.style.opacity = '0';
+      loader.style.transition = 'opacity 0.5s ease';
       setTimeout(() => {
-        content.classList.add('show');
-      }, 300);
-    });
-  </script>
+        loader.style.display = 'none';
+        content.classList.remove('hidden');
+        // Trigger animation after revealing
+        setTimeout(() => {
+          content.classList.add('show');
+        }, 100);
+      }, 500);
+    }, 800); // Loader visible for at least 0.8s
+  });
+
+   // Hamburger Menu Toggle
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('hidden');
+  }
+</script>
+
 
 </body>
 </html>
