--- a/Team_Rudra-main/sponsor.html
+++ b/Team_Rudra-main/sponsor.html
@@ -33,7 +33,7 @@
     <div class="w-16 h-16 border-4 border-red-400 border-t-transparent rounded-full slow-spin"></div>
   </div>
 
-    <header class="flex justify-between items-center relative shadow-lg px-4 py-2 bg-transparent">
+    <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
@@ -75,6 +75,15 @@
   </div>
 </header>
 
+
+  <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
+  <a href="index.html" class="hover:text-yellow-400">Home</a>
+  <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+  <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+  <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+</div>
 
   <section class="max-w-6xl mx-auto px-4 py-10 hidden" id="main-content">
     <h1 class="text-4xl font-extrabold text-center text-red-400 mb-10 fade-slide">Our Sponsors</h1>
@@ -153,6 +162,10 @@
         }, index * 400);
       });
     });
+     // Hamburger Menu Toggle
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('hidden');
+  }
   </script>
 
 </body>
