--- a/Team_Rudra-main/vehicle.html
+++ b/Team_Rudra-main/vehicle.html
@@ -2,37 +2,64 @@
 <head>  <title>Vehicle</title> 
 
   <link rel="stylesheet" href="vehicle.css">
+  
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body >
 
 
-  <div class="header">
-    <div class="head-rudra">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
+  <div class="flex items-center">
+    <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
+    <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
+      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+    </h1>
+  </div>
 
-
-      <img src="./images/logo1.png" alt="" class="logo" />
-      <h1>𝐓𝖾αꭑ 𝐑υᑯ𝗋α</h1>
+  <div class="hidden md:flex text-white gap-10 mr-10 text-lg font-semibold"> <!-- Optional: slightly larger menu text -->
+    <div class="relative group cursor-pointer">
+      <a href="index.html" class="hover:text-yellow-400">Home</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-  
-    <!-- Hamburger Icon (Only shown on small screens) -->
-    <div class="hamburger" onclick="toggleMenu()">
-      <span></span>
-      <span></span>
-      <span></span>
+    <div class="relative group cursor-pointer">
+      <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
-  
-    <!-- Navigation Links -->
-    <div class="nav" id="navMenu">
-      <div class="home" onclick="location.href='index.html'"><h3>Home</h3></div>
-      <div class="vehicle" onclick="location.href='vehicle.html'"><h3>Vehicle</h3></div>
-      <div class="faculty" onclick="location.href='./facultyInfo.html'"><h3>Faculty</h3></div>
-      <div class="sponsors" onclick="location.href='./sponsor.html'"><h3>Sponsors</h3></div>
-      <div class="member"><h3>Team Members</h3></div>
-      <div class="contactUs" onclick="location.href='./Contact.html' "><h3>Contact Us</h3></div>
+    <div class="relative group cursor-pointer">
+      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
+    </div>
+    <div class="relative group cursor-pointer">
+      <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
   </div>
-  
+
+  <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+  </div>
+</header>
+
+
+  <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
+  <a href="index.html" class="hover:text-yellow-400">Home</a>
+  <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+  <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+  <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+</div>
+
 
 
   <div class="main">
@@ -87,7 +114,7 @@
     <div class="row">
     <div class="card">
       <h2>Powertrain</h2>
-      <img src="./images/vehicle/B.jpg" alt="design" class="card-image">
+      <img src="./images/vehicle/power.jpg" alt="design" class="card-image">
       <div class="names">
         <p><b>The powertrain system delivers energy from the engine to the wheels with maximum efficiency.</b></p>
       
@@ -240,14 +267,22 @@ A well-engineered powertrain defines the vehicle’s acceleration, speed, and 
 </script>
 
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const cards = document.querySelectorAll(".card");
-    cards.forEach((card, i) => {
-      setTimeout(() => {
-        card.classList.add("visible");
-      }, i * 3000); // 300ms delay between cards
-    });
+ document.addEventListener("DOMContentLoaded", () => {
+  const cards = document.querySelectorAll(".card");
+  const baseDelay = 2000; // Time before first card appears
+  const stepDelay = 4000; // 4 seconds between cards
+
+  cards.forEach((card, i) => {
+    setTimeout(() => {
+      card.classList.add("visible");
+    }, baseDelay + i * stepDelay);
   });
+});
+  // Hamburger Menu Toggle
+  function toggleMenu() {
+    document.getElementById('navMenu').classList.toggle('hidden');
+  }
+
 </script>
 
 
