--- a/Team_Rudra-main/index.html
+++ b/Team_Rudra-main/index.html
@@ -311,7 +311,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+      <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -333,7 +333,7 @@
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
   <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-  <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+  <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
 </div>
 
@@ -405,7 +405,7 @@ He’s not just our advisor —
 
 <section class="bg-black text-white py-10" data-aos="fade-up">
   <div class="max-w-7xl mx-auto px-4">
-    <h2 class="text-3xl font-extrabold text-center mb-4">Sponsors</h2>
+    <h2 class="text-4xl font-bold text-center mb-4 text-red-600">Sponsors</h2>
     <div class="flex flex-col md:flex-row bg-gray-800 rounded-lg shadow-lg overflow-hidden glowing-box">
       <div class="flex-1 p-6 flex flex-col justify-center">
         <p class="mb-4 text-gray-300">
