--- a/Team_Rudra-main/vehicle.html
+++ b/Team_Rudra-main/vehicle.html
@@ -8,7 +8,7 @@
 <body >
 
 
-   <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
+  <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
@@ -34,7 +34,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+      <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -56,7 +56,7 @@
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
   <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-  <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+  <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
 </div>
 
