--- a/Team_Rudra-main/sponsor.html
+++ b/Team_Rudra-main/sponsor.html
@@ -32,8 +32,7 @@
   <div id="loader" class="fixed inset-0 bg-[#1f2937] flex justify-center items-center z-50">
     <div class="w-16 h-16 border-4 border-red-400 border-t-transparent rounded-full slow-spin"></div>
   </div>
-
-    <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
+  <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
@@ -59,7 +58,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="team.html" class="hover:text-yellow-400">Team Members</a>
+      <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -68,6 +67,22 @@
     </div>
   </div>
 
+  <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+    <span class="h-[3px] w-6 bg-white rounded"></span>
+  </div>
+</header>
+
+
+  <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
+  <a href="index.html" class="hover:text-yellow-400">Home</a>
+  <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
+  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
+  <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
+  <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+</div>
   <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
     <span class="h-[3px] w-6 bg-white rounded"></span>
     <span class="h-[3px] w-6 bg-white rounded"></span>
