--- a/Team_Rudra-main/ContactSponsor.html
+++ b/Team_Rudra-main/ContactSponsor.html
@@ -67,7 +67,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -95,7 +95,7 @@
   <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
   <a href="index.html" class="hover:text-yellow-400">Home</a>
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
   <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
