--- a/Team_Rudra-main/about.html
+++ b/Team_Rudra-main/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Team Rudra</title>
+  <title>About | Team Rudra</title>
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .fade-slide {
@@ -48,10 +49,10 @@
         We’re not just trying to compete — we’re trying to create something that will outlive us and light the path for the next generation of rural innovators.
       </p>
       <p class="text-4xl font-serif mt-4 text-[#d02919]">
-        Faculty Guide:
-      </p><br>
+        Faculty Guide
+      </p><p class="text-xl font-medium mt-4">
       Dr. V. Chandra Sekhara Rao<br>
-      (Ph.D., IIT Madras) — Associate Professor & Team Advisor
+      (Ph.D., IIT Madras) — Associate Professor & Team Advisor</p>
     </div>
 
     <div>
@@ -63,6 +64,13 @@
         We represent the spirit and capability of 10,000+ students at RGUKT Basar, showing what youth can achieve when trusted with tools and a vision
       </p>
     </div>
+
+     <!-- Back Button at Bottom -->
+      <div class="flex justify-end mt-10">
+        <a href="./index.html" class="bg-red-400 hover:bg-yellow-500 text-black font-semibold py-2 px-4 rounded shadow-md transition duration-300">
+          ← Back
+        </a>
+      </div>
 
   </div>
 
