--- a/Team_Rudra-main/facultyInfo.html
+++ b/Team_Rudra-main/facultyInfo.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Faculty - Dr. V. Chandra Sekhara Rao P</title>
+  <link rel="website icon" type="png" href="./images/logo1.png">
+  <title>Faculty - Dr. V. Chandra Sekhara Rao P | Team Rudra</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .fade-slide {
@@ -33,58 +34,6 @@
 
   <div id="main-content" class="fade-slide hidden">
 
-    <!-- Header -->
-  <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
-  <div class="flex items-center">
-    <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
-    <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
-      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
-    </h1>
-  </div>
-
-  <div class="hidden md:flex text-white gap-10 mr-10 text-lg font-semibold"> <!-- Optional: slightly larger menu text -->
-    <div class="relative group cursor-pointer">
-      <a href="index.html" class="hover:text-yellow-400">Home</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-  </div>
-
-  <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
-    <span class="h-[3px] w-6 bg-white rounded"></span>
-    <span class="h-[3px] w-6 bg-white rounded"></span>
-    <span class="h-[3px] w-6 bg-white rounded"></span>
-  </div>
-</header>
-
-
-  <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
-  <a href="index.html" class="hover:text-yellow-400">Home</a>
-  <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
-  <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-  <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
-  <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
-</div>
 
 
     <!-- Content -->
@@ -100,7 +49,10 @@
             Since joining RGUKT in 2016, he has held significant roles including Assistant Professor and Former Controller of Examinations.
           </p> 
         </div>
-        <img src="./images/faculty.png" alt="Dr. Rao Photo" class="w-60 h-60 rounded-full object-cover border-4 border-gray-700 shadow-xl ml-0 md:ml-10 mt-6 md:mt-0">
+        <img src="./images/faculty.png" 
+     alt="Dr. Rao Photo"
+     class="w-60 h-60 rounded-full object-cover shadow-xl ml-0 md:ml-10 mt-6 md:mt-0 transform transition duration-300 ease-in-out hover:scale-105 hover:shadow-[0_0_20px_#3b82f6]">
+
       </div>
 
       <!-- Sections -->
@@ -148,6 +100,13 @@
         to own every inch of this machine.”
       </div>
 
+      
+      <!-- Back Button at Bottom -->
+       <div class="flex justify-end mt-10">
+         <a href="./GuidingAthu.html" class="bg-red-400 hover:bg-yellow-500 text-black font-semibold py-2 px-4 rounded shadow-md transition duration-300">
+           ← Back
+         </a>
+       </div>
     </div>
 
   </div>
