--- a/Team_Rudra-main/index.html
+++ b/Team_Rudra-main/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Team Rudra</title>
-  <link rel="website icon" type="png" href="logo1.png">
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
@@ -289,7 +289,8 @@
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
-      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+      <!-- 𝐓𝖾αꭑ 𝐑υᑯ𝗋α -->
+       TEAM 𝗥𝗨𝗗𝗥𝗔
     </h1>
   </div>
 
@@ -303,7 +304,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -331,7 +332,7 @@
   <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
   <a href="index.html" class="hover:text-yellow-400">Home</a>
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
   <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
@@ -377,7 +378,8 @@
     </div>
 
     <div class="flex-1 p-6 text-white">
-      <h1 class="text-4xl font-bold text-[#f97316] mb-6 text-center"> Guidance</h1>
+      <h1 class="text-4xl font-bold text-[#f97316] mb-6 ml-[150px] text-left">Guidance</h1>
+
       <p class="text-gray-300 text-justify leading-9 text-lg">
         Our journey is supported by the constant guidance of our faculty mentor, Dr. V. Chandra Sekhara Rao (Ph.D., IIT Madras) — Associate Professor of Mechanical Engineering at RGUKT Basar.
 
@@ -393,9 +395,12 @@ He’s not just our advisor —
 
 > “He’s the steady force behind us — guiding, believing, and helping us transform challenges into learning.”
       </p>
-      <a href="facultyInfo.html" class="inline-block mt-4 px-6 py-2 bg-red-600 text-white rounded-full font-semibold hover:scale-110 transition shadow-lg animate-pulse">
-        Know More
-      </a>
+      <div class="flex justify-center">
+  <a href="facultyInfo.html" class="inline-block mt-4 px-6 py-2 bg-red-600 text-white rounded-full font-semibold hover:scale-110 transition shadow-lg animate-pulse">
+    Know More
+  </a>
+</div>
+
     </div>
 
   </div>
@@ -405,14 +410,14 @@ He’s not just our advisor —
 
 <section class="bg-black text-white py-10" data-aos="fade-up">
   <div class="max-w-7xl mx-auto px-4">
-    <h2 class="text-4xl font-bold text-center mb-4 text-red-600">Sponsors</h2>
+    <h2 class="text-4xl font-bold text-center mb-8 text-red-600">Sponsors</h2>
     <div class="flex flex-col md:flex-row bg-gray-800 rounded-lg shadow-lg overflow-hidden glowing-box">
       <div class="flex-1 p-6 flex flex-col justify-center">
         <p class="mb-4 text-gray-300">
           Team Rudra is a student-driven motorsports initiative from RGUKT Basar, Telangana—a premier rural-based university nurturing over 10,000 students with technical ambition and creative grit.<br>
           As the first Formula Student team from our institution, we are on a mission to design, build, and race a high-performance formula-style vehicle at FFS India 2025.
           Our journey is built on passion, resourcefulness, and technical excellence—but our sponsors are the force that turn our vision into reality.<br>
-          💡 With your support, we don’t just build a car — we engineer futures.
+          With your support, we don’t just build a car — we engineer futures.
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center flex-wrap mt-4">
   <a href="./sponsor.html" class="text-orange-400 border border-orange-400 px-4 py-2 rounded hover:bg-orange-400 hover:text-black font-semibold transition text-center">
@@ -449,7 +454,7 @@ He’s not just our advisor —
               <h3>contact info</h3>
               <p> <i class="fas fa-phone"></i> +91 9121156180</p>
               <p> <i class="fas fa-envelope"></i> teamrudraracers@gmail.com</p>
-              <p> <i class="fas fa-map-marked-alt"></i> Telangana, India-503102</p>
+              <p> <i class="fas fa-map-marked-alt"></i> Telangana, India-504107</p>
             </div>
             <div>
               <iframe
