--- a/Team_Rudra-main/Contact.html
+++ b/Team_Rudra-main/Contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Form</title>
+  <link rel="website icon" type="png" href="./images/logo1.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
@@ -22,11 +23,11 @@
 <body class="bg-black text-white min-h-screen">
 
   <!-- Header -->
-  <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
+  <header class="flex justify-between items-center relative shadow-lg px-24 bg-transparent">
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
-      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+      TEAM 𝗥𝗨𝗗𝗥𝗔
     </h1>
   </div>
 
@@ -40,7 +41,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -68,7 +69,7 @@
   <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
   <a href="index.html" class="hover:text-yellow-400">Home</a>
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
   <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
