--- a/Team_Rudra-main/sponsor.html
+++ b/Team_Rudra-main/sponsor.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Our Sponsors | Team Rudra</title>
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="website icon" type="png" href="./images/logo1.png">
   <style>
@@ -36,7 +37,7 @@
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
-      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+      TEAM 𝗥𝗨𝗗𝗥𝗔
     </h1>
   </div>
 
@@ -50,7 +51,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -78,7 +79,7 @@
   <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
   <a href="index.html" class="hover:text-yellow-400">Home</a>
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authoritiesy</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
   <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
@@ -94,7 +95,7 @@
   <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
   <a href="index.html" class="hover:text-yellow-400">Home</a>
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./GuidingAthu.html" class="hover:text-yellow-400">FGuide Authorities</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
   <a href="team.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
