--- a/Team_Rudra-main/teamMembers.html
+++ b/Team_Rudra-main/teamMembers.html
@@ -6,65 +6,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="website icon" type="png" href="logo1.png">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <title>Team Rudra</title>
+  <title>Team Members | Team Rudra</title>
   <link rel="stylesheet" href="teamMembers.css" />
+  <link rel="website icon" type="png" href="./images/logo1.png">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Rajdhani:wght@700&family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-  
-    <header class="flex justify-between items-center relative shadow-lg px-4 max-w-8xl bg-transparent">
-  <div class="flex items-center">
-    <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
-    <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
-      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
-    </h1>
-  </div>
 
-  <div class="hidden md:flex text-white gap-10 ml-10 text-lg font-semibold"> <!-- Optional: slightly larger menu text -->
-    <div class="relative group cursor-pointer">
-      <a href="index.html" class="hover:text-yellow-400">Home</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-    <div class="relative group cursor-pointer">
-      <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
-      <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
-    </div>
-  </div>
+  <!-- Hamburger Icon for Mobile -->
+<div class="hamburger" onclick="toggleMenu()">☰</div>
 
-  <div class="md:hidden flex flex-col justify-end gap-1 cursor-pointer" onclick="toggleMenu()">
-    <span class="h-[3px] w-6 bg-white rounded"></span>
-    <span class="h-[3px] w-6 bg-white rounded"></span>
-    <span class="h-[3px] w-6 bg-white rounded"></span>
-  </div>
-</header>
-
-
-  <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
-  <a href="index.html" class="hover:text-yellow-400">Home</a>
-  <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
-  <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
-  <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
-  <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
+<!-- Navigation Menu -->
+<div class="nav" id="navMenu">
+  <div class="home"><a href="./index.html"><h3>Home</h3></a></div>
+  <div class="vehicle"><a href="./vehicle.html"><h3>Vehicle</h3></a></div>
+  <div class="faculty"><a href="./GuidingAthu.html"><h3>Guide Authorities</h3></a></div>
+  <div class="sponsors"><a href="./sponsor.html"><h3>Sponsors</h3></a></div>
+  <div class="member"><a href="./teamMembers.html"><h3>Team Members</h3></a></div>
+  <div class="contactUs"><a href="./Contact.html"><h3>Contact Us</h3></a></div>
 </div>
+
+
 
   <!-- TEAM RUDRA Heading and Banner -->
   <div class="team-header">
@@ -135,7 +97,7 @@
     <div class="flip-box">
       <div class="flip-inner">
         <div class="flip-front">
-          <img src="./images/suspension_head.png" alt="Member 2" class ="member-photo"/>
+          <img src="./images/sukumar.jpg" alt="Member 2" class ="member-photo"/>
         </div>
         <div class="flip-back">
           <p><strong>SUKUMAR <br> SUSPENSION HEAD</strong></p>
@@ -376,11 +338,15 @@
   </div>
 </section>
 
-
-<script> // Hamburger Menu Toggle
+<script>
   function toggleMenu() {
-    document.getElementById('navMenu').classList.toggle('hidden');
-  }</script>
+    const navMenu = document.getElementById("navMenu");
+    navMenu.classList.toggle("show");
+  }
+</script>
+
+
+
 
 </body>
 </html>
