--- a/Team_Rudra-main/vehicle.html
+++ b/Team_Rudra-main/vehicle.html
@@ -1,18 +1,22 @@
 <html>
-<head>  <title>Vehicle</title> 
+<head>  <title>Vehicle | Team Rudra</title> 
 
   <link rel="stylesheet" href="vehicle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magic/1.1.0/magic.min.css">
   
   <script src="https://cdn.tailwindcss.com"></script>
+
+
 </head>
 <body >
 
 
-  <header class="flex justify-between items-center relative shadow-lg px-4 bg-transparent">
+  <header class="flex justify-between items-center relative shadow-lg px-4 -mt-5 bg-transparent">
   <div class="flex items-center">
     <img src="./images/logo1.png" alt="" class="w-28 h-28"> <!-- Increased logo size -->
     <h1 class="text-4xl font-extrabold bg-gradient-to-r from-red-500 to-yellow-400 bg-clip-text text-transparent ml-3"> <!-- Increased text size -->
-      𝐓𝖾αꭑ 𝐑υᑯ𝗋α
+      <!-- 𝐓𝖾αꭑ 𝐑υᑯ𝗋α -->
+      TEAM 𝗥𝗨𝗗𝗥𝗔
     </h1>
   </div>
 
@@ -26,7 +30,7 @@
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
-      <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+      <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
       <div class="absolute bottom-[-5px] left-1/2 w-4/5 h-[3px] bg-cyan-400 scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300 transform -translate-x-1/2"></div>
     </div>
     <div class="relative group cursor-pointer">
@@ -54,11 +58,18 @@
   <div class="hidden flex flex-col bg-transparent text-white w-full py-4 pr-4 text-end space-y-4" id="navMenu">
   <a href="index.html" class="hover:text-yellow-400">Home</a>
   <a href="./vehicle.html" class="hover:text-yellow-400">Vehicle</a>
-  <a href="./facultyInfo.html" class="hover:text-yellow-400">Faculty</a>
+  <a href="./GuidingAthu.html" class="hover:text-yellow-400">Guide Authorities</a>
   <a href="./sponsor.html" class="hover:text-yellow-400">Sponsors</a>
   <a href="./teamMembers.html" class="hover:text-yellow-400">Team Members</a>
   <a href="./Contact.html" class="hover:text-yellow-400">Contact Us</a>
 </div>
+
+<div class="image_name">
+  <img src="./images/300.png" alt="Car"
+       class="magic vanishIn car"
+       style="animation-delay: 1s; animation-duration: 1.5s;">
+</div>
+
 
 
 
